fix: 'MessagesList' went out of bounds

--- a/client/src/components/MessagesList/MessagesList.scss
+++ b/client/src/components/MessagesList/MessagesList.scss
@@ -73,12 +73,6 @@
   }
 }
 
-@media all and (max-width: 1020px) {
-  .messages-list {
-    height: calc(100vh - 10px - 48px - 10px - 50px);
-  }
-}
-
 @media all and (max-width: 900px) {
   .messages-list {
     &__message {
